[package]
name = "multiserve"
version = "0.1.0"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.5"
net2 = "0.2"
tokio = { version = "0.2", features = ["rt-core", "rt-util", "io-util", "tcp", "time"] }